# Iep_proj

./: README.md  build.sh
src/: CMakeLists.txt  main.cpp
src/Case/: CMakeLists.txt
src/Case/src/: case.cpp  case.hpp  casergb.cpp  casergb.hpp
src/Computer/: CMakeLists.txt
src/Computer/src/: computer.cpp  computer.hpp
src/GraphicC/: CMakeLists.txt
src/GraphicC/src/: graphicc.cpp  graphicc.hpp
src/MotherBoard/: CMakeLists.txt
src/MotherBoard/src/: motherboard.cpp  motherboard.hpp
src/Storage/: CMakeLists.txt
src/Storage/src/: storage.cpp  storage.hpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  computer.cpp  main  main.cpp
